Suppress hard-coded URLs
Use {% url 'name' param %} in href attributes.

Reference:

- https://docs.djangoproject.com/fr/4.0/intro/tutorial03/#removing-hardcoded-urls-in-templates

--- a/chinook/disks/templates/disks/albums_list.html
+++ b/chinook/disks/templates/disks/albums_list.html
@@ -3,7 +3,7 @@
 {% if albums %}
     <ul>
     {% for album in albums %}
-        <li><a href="/disks/{{ album.id }}">{{ album.title }}</a> by {{ album.artist.name }}</li>
+        <li><a href="{% url 'album_details' album.id %}">{{ album.title }}</a> by {{ album.artist.name }}</li>
     {% endfor %}
     </ul>
 {% else %}
