--- a/chinook/disks/templates/disks/album_details.html
+++ b/chinook/disks/templates/disks/album_details.html
@@ -7,4 +7,4 @@
 {% endfor %}
 </ul>
 
-<h5><a href="/disks">Back to album list</a></h5>
+<h5><a href="{% url 'albums_list' %}">Back to album list</a></h5>
