--- a/chinook/disks/templates/disks/albums_list.html
+++ b/chinook/disks/templates/disks/albums_list.html
@@ -1,5 +1,11 @@
 <h1>Albums</h1>
 
+<form action="{% url 'disks:albums_list' %}" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit"/>
+</form>
+
 {% if albums %}
     <ul>
     {% for album in albums %}
