--- a/chinook/disks/templates/disks/album_details.html
+++ b/chinook/disks/templates/disks/album_details.html
@@ -1,3 +1,9 @@
+{% extends 'base.html' %}
+
+{% block title %}Chinook Album '{{ album.title|truncatechars:10 }}' {% endblock title%}
+
+{% block content %}
+
 <h1>{{ album.title }}</h1>
 <h3>{{ album.artist.name }}</h3>
 <ul>
@@ -8,3 +14,5 @@
 </ul>
 
 <h5><a href="{% url 'disks:albums_list' %}">Back to album list</a></h5>
+
+{% endblock content %}
