Add static file (SQLite logo)
Need to create a directory for static files, and reference it in a
new variable in setting.py: STATICFILES_DIRS. Used in base template.

--- a/chinook/templates/base.html
+++ b/chinook/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +7,13 @@
 </head>
 
 <body>
-    <header>Chinook Assignment</header>
+    <header>
+        Chinook Assignment with SQLite<br>
+        <img src="{% static 'images/sqlite-logo.png' %}" width=80px alt="logo"/>
+    </header>
     {% block content %}{% endblock %}
-    <footer><em>&copy; ISAE-SUPAERO</em></footer>
+    <footer>
+        <em>&copy; ISAE-SUPAERO</em>
+    </footer>
 </body>
 </html>
