--- a/chinook/templates/base.html
+++ b/chinook/templates/base.html
@@ -3,17 +3,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>{% block title %}Chinook{% endblock %}</title>
 </head>
 
 <body>
-    <header>
-        Chinook Assignment with SQLite<br>
-        <img src="{% static 'images/sqlite-logo.png' %}" width=80px alt="logo"/>
-    </header>
-    {% block content %}{% endblock %}
-    <footer>
-        <em>&copy; ISAE-SUPAERO</em>
-    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="row pb-3">
+            <header>
+                Chinook Assignment with SQLite<br>
+                <img src="{% static 'images/sqlite-logo.png' %}" width=80px alt="logo"/>
+            </header>
+        </div>
+
+        {% block content %}{% endblock %}
+
+        <div class="row pt-5">
+            <footer>
+                <em>&copy; ISAE-SUPAERO</em>
+            </footer>
+        </div>
+    </div>
 </body>
 </html>
