--- a/chinook/disks/templates/disks/album_details.html
+++ b/chinook/disks/templates/disks/album_details.html
@@ -4,15 +4,37 @@
 
 {% block content %}
 
-<h1>{{ album.title }}</h1>
-<h3>{{ album.artist.name }}</h3>
-<ul>
-{% for track in album.track_set.all %}
-    <li>{{ track.name }} (by {{ track.composer }})<br/>
-        {{ track.milliseconds }} ms, {{ track.bytes }} bytes, {{ track.unitPrice }} EUR</li>
-{% endfor %}
-</ul>
+<div class="row pb-3">
+    <h2>{{ album.title }} <small>by {{ album.artist.name }}</small></h2>
+</div>
 
-<h5><a href="{% url 'disks:albums_list' %}">Back to album list</a></h5>
+<div class="row">
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Track name</th>
+            <th>Composer(s)</th>
+            <th>Duration (ms)</th>
+            <th>Size (bytes)</th>
+            <th>Unit Price (&euro;)</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for track in album.track_set.all %}
+            <tr>
+                <td>{{ track.name }}</td>
+                <td>{{ track.composer }}</td>
+                <td>{{ track.milliseconds }}</td>
+                <td>{{ track.bytes }}</td>
+                <td>{{ track.unitPrice }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+<div class="row pt-3">
+    <a class="btn btn-primary" href="{% url 'disks:albums_list' %}">Back to album list</a>
+</div>
 
 {% endblock content %}
