--- a/chinook/disks/templates/disks/albums_list.html
+++ b/chinook/disks/templates/disks/albums_list.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <div class="row pb-3">
-        <h1>Albums</h1>
+        <h1><i class="fa-solid fa-record-vinyl"></i>&emsp;Albums</h1>
     </div>
 
     <div class="clearfix">
@@ -23,8 +23,8 @@
         <table class="table table-striped">
             <thead>
             <tr>
-                <th>Title</th>
-                <th>Artist</th>
+                <th><i class="fa-solid fa-record-vinyl"></i>&ensp;Title</th>
+                <th><i class="fa-solid fa-microphone"></i>&ensp;Artist</th>
             </tr>
             </thead>
             <tbody>
