Use bootstrap styles in research form
Have to use widgets in the form class to style the input field.
For the label field, to add specific styling, see comment in
the template; you will have to use a verbose {% for ... %} loop.

References:
- https://docs.djangoproject.com/fr/4.0/topics/forms/#working-with-form-templates
- https://docs.djangoproject.com/fr/4.0/topics/forms/#more-on-fields
- https://getbootstrap.com/docs/5.0/forms/overview/
- https://medium.com/swlh/how-to-style-your-django-forms-7e8463aae4fa

--- a/chinook/disks/templates/disks/albums_list.html
+++ b/chinook/disks/templates/disks/albums_list.html
@@ -9,11 +9,29 @@
     </div>
 
     <div class="clearfix">
-        <div class="float-right pb-3">
+        <div class="float-end pb-3">
             <form action="{% url 'disks:albums_list' %}" method="post">
                 {% csrf_token %}
-                {{ form }}
-                <input class="btn btn-primary" type="submit" value="Submit"/>
+                 
+                <!-- No control on label styling -->
+                <div class="mb-3">
+                    {{ form }}
+                </div>
+                
+                <!-- Alternative code with fine control on labels styling -->
+                <!--
+                {% for field in form %}
+                <div class="mb-3">
+                    <label for="{{ field.id_for_label }}" class="form-label text-primary">{{ field.label }}</label>
+                    <br/>
+                    {{ field }}
+                </div>
+                {% endfor %}
+                -->
+
+                <div class="mb-3">
+                    <input class="btn btn-primary" type="submit" value="Submit"/>
+                </div>
             </form>
         </div>
     </div>
